hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: pnsi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
