hello-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: pnsi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: gcr.io/google-samples/hello-app:2.0
---
apiVersion: v1
kind: Service
metadata:
  name: hello-test
  namespace: pnsi
spec:
  type: NodePort
  selector:
    app: hello
  ports:
  - port: 10000
    targetPort: 8080
    nodePort: 8080
