hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: pnsi
spec:
  type: NodePort
  selector:
    app: hello
  ports:
  - port: 10000
    targetPort: 8080
    nodePort: 8080
